--- a/index.html
+++ b/index.html
@@ -5,35 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
   </head>
   <body>
     <div class="card">
-        <div class="search">
-            <input type="text" placeholder="Enter city name..." spellcheck="false">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-        </div>
-        <div class="weather">
-            <img src="assets/images/rain.png" class="weatherIcon">
-            <h1 class="temp"></h1>
-            <h2 class="cityName"></h2>
-            <div class="details">
-                <div class="col">
-                    <img src="assets/images/humidity.png">
-                    <div>
-                        <p class="humidityDetails"></p>
-                        <p>Humidity</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <img src="assets/images/wind.png">
-                    <div>
-                        <p class="windDetails"></p>
-                        <p class="wind">Wind Speed</p>
-                    </div>
-                </div>
+      <div class="search">
+        <input
+          type="text"
+          placeholder="Enter city name..."
+          spellcheck="false"
+        />
+        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+      </div>
+      <p class="error">
+        Invalid City Name!!! <br />
+        Please enter a Valid City Name.....
+      </p>
+      <div class="weather">
+        <img src="assets/images/rain.png" class="weatherIcon" />
+        <h1 class="temp"></h1>
+        <h2 class="cityName"></h2>
+        <div class="details">
+          <div class="col">
+            <img src="assets/images/humidity.png" />
+            <div>
+              <p class="humidityDetails"></p>
+              <p>Humidity</p>
             </div>
+          </div>
+          <div class="col">
+            <img src="assets/images/wind.png" />
+            <div>
+              <p class="windDetails"></p>
+              <p class="wind">Wind Speed</p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
